<resources>
    <string name="app_name">client_in_time</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="nav_title_main">Main</string>
    <string name="nav_title_cart">Cart</string>
    <string name="nav_title_orders">Orders</string>
    <string name="nav_title_profile">Profile</string>
    <string name="list_is_empty">list is empty</string>
    <string name="try_again">Try again</string>
    <string name="load_error">Load error</string>
    <string name="sign_in">signin</string>
    <string name="error_login">Login error, check you internet</string>
    <string name="invalid_login">Invalid email or password</string>
    <string name="name">Name</string>
</resources>